gtag configured, hopefully

--- a/src/app.html
+++ b/src/app.html
@@ -16,18 +16,18 @@
 		<!-- End Google Fonts block -->
 
 		<!-- You can add global <meta> tags here, but anything not global or dynamic should be a `<svelte:head>` tag on the proper page(s) instead. -->
-	</head>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag() {
-			window.dataLayer.push(arguments);
-		}
-		gtag('js', new Date());
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-M6S4SP5GVN"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag('js', new Date());
 
-		gtag('config', 'GA_MEASUREMENT_ID');
-	</script>
+			gtag('config', 'G-M6S4SP5GVN');
+		</script>
+	</head>
 	<body>
 		<div id="svelte">%svelte.body%</div>
 	</body>
